src/objects/Accounting_Period__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Accounting Period</label>
    <nameField>
        <label>Accounting Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>